# magicsquare

./: CHANGELOG.md  README.md  magicsquare.cabal  magicsquare.nb
app/: Main.hs
examples/: Examples.hs
internal/: MagicSquareInternal.hs
src/: Examples.hs  MagicSquare.hs  Main.hs
test/: MagicSquareTest.hs  Main.hs
