cabal-version:      3.0
name:               magicsquare
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Uwe Hoffmann
maintainer:         uwedeportivo@vivaldi.net
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MagicSquare
    build-depends:    base ^>=4.18.0.0, magicsquare-internal
    hs-source-dirs:   src
    default-language: Haskell2010

library magicsquare-internal
    import:           warnings
    exposed-modules:  MagicSquareInternal
    build-depends:    base ^>=4.18.0.0, array
    hs-source-dirs:   internal
    default-language: Haskell2010

library examples
    ghc-options: -Wno-unused-imports
    exposed-modules:  Examples
    build-depends:    base ^>=4.18.0.0, array, magicsquare-internal, magicsquare
    hs-source-dirs:   examples
    default-language: Haskell2010

executable magicsquare
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        magicsquare
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite magicsquare-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        magicsquare,
        magicsquare-internal,
        hspec

